cursive-bootstrap/tests/ui/E-TYP/E-TYP-1801.cursive
// RUN: compile-fail
// DIAG: E-TYP-1801
// SPEC: 5.2.1
// DESC: Tuple index out of bounds

public procedure main(move ctx: Context) -> i32 {
    let t: (i32, i32) = (1, 2)
    let x: i32 = t.5  //~ ERROR E-TYP-1801: tuple index out of bounds
    return x
}
